--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.15",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
